# ideas-worlds_best_coffee_grinder

./: .gitignore  Balance.cpp  Balance.hpp  CMakeLists.txt  Grinder.cpp  Grinder.hpp  Hx711.cpp  Hx711.hpp  Readme.md  Stepper.cpp  Stepper.hpp  UserConfig.hpp  UserInput.cpp  UserInput.hpp  UserInterface.cpp  UserInterface.hpp  blink.pio  main.cpp  pico.code-workspace  pico_sdk_import.cmake  pimoroni_pico_import.cmake  serial_print.cpp  serial_print.hpp
pics/: stepper motor
